Fixing image width on mobile

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -15,6 +15,10 @@ body {
 	background-color: none;
 }
 
+img {
+	max-width: 100%;
+}
+
 
 // ITEMS
 
